--- a/app/src/main/res/layout/picactivity.xml
+++ b/app/src/main/res/layout/picactivity.xml
@@ -10,19 +10,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="移动图片"
-            android:id="@+id/btn_moveImg"
+            android:text="解密图片"
+            android:id="@+id/btn_decryptImg"
             android:layout_gravity="center_horizontal" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="加密图片"
-            android:id="@+id/btn_choseImg" />
-
+            android:id="@+id/btn_encryptImg" />
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -40,16 +40,10 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/editText1"
-        android:text="20111003511 余东熹" />
+        android:id="@+id/editText1" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/editText2" />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/iv" />
+        android:id="@+id/edt_pswd2" />
 </LinearLayout>
