--- a/app/src/main/res/layout/picactivity.xml
+++ b/app/src/main/res/layout/picactivity.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:text="解密图片"
             android:id="@+id/btn_decryptImg"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"/>
 
         <Button
             android:layout_width="wrap_content"
@@ -40,10 +40,32 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/editText1" />
+        android:id="@+id/edt_input" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/edt_pswd2" />
+        android:id="@+id/edt_output" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:id="@+id/edt_passwd"
+        android:hint="文本密钥大于10字节" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:ems="10"
+        android:id="@+id/edt_passwd2"
+        android:hint="再输一次"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="确认密码"
+        android:id="@+id/btn_passwd" />
 </LinearLayout>
