生成apk，修改库名称

--- a/app/src/main/res/layout/picactivity.xml
+++ b/app/src/main/res/layout/picactivity.xml
@@ -68,4 +68,10 @@
         android:layout_height="wrap_content"
         android:text="确认密码"
         android:id="@+id/btn_passwd" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="浏览"
+        android:id="@+id/btn_browse" />
 </LinearLayout>
